          it out with me in a long session). tincd/darwin is still available.
        - new device type "tincd/bsd", which is a newer version of the
          *bsd-drivers taken from tinc.
        - fixed a bug in relying on the order of global construction
          when tcp transport was enabled. The fix makes it use no
          cpu time unless it is in use, too.
	- skip unparsable config lines with a warning instead of stopping
          parsing and continuing with a certainly unusable config.

1.8 Fri Mar 18 00:58:55 CET 2005
	- enable-udp = yes is now default only when no other protocols
          are enabled. otherwise it is disabled unless explicitly enabled.
        - implemented dns tunneling (experimental now and in the future).
        - remove support for pre-release version protocol.
        - updated tincd drivers (rev 1433), added uml_socket driver, documented
          tincd drivers a bit better.
        - document icmp configuration values.
        - document transport protocols in gvpe.protocol(7).
        - remove unused ChangeLog file.
        - created a mailinglist at gvpe@lists.schmorp.de.
        - added an exemption to allow distribution of binaries linked against
          OpenSSL, as suggested by Guus Sliepen (author of tinc). No
          GNUTLS conversion in sight.
        - some portability fixes with respect to --disable-nls.

1.7 Tue Feb 22 23:58:59 CET 2005
	- protocol version 0.1, compatible with older releases.
	- first gnu release.
        - documented the special value 1 for router-priority.
        - renamed vped => gvpe and vpectrl => gvpectrl, as well as
          vped.conf => gvpe.conf.
	- new per-node option "max-retry".
	- asymmetric rekeying behaviour, so hosts don't rekey simultaneously.
        - new configure option --enable-static-daemon.
        - fix configure --help output.
        - many documentation layout fixes.
        - synced iom.[Ch] from rxvt-unicode.