@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "GVPE 5"
-.TH GVPE 5 "2005-03-23" "1.9" "GNU Virtual Private Ethernet"
+.TH GVPE 5 "2005-03-26" "1.9" "GNU Virtual Private Ethernet"
 .SH "NAME"
 GNU\-VPE \- Overview of the GNU Virtual Private Ethernet suite.
 .SH "DESCRIPTION"
