@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "GVPE 8"
-.TH GVPE 8 "2005-03-23" "1.9" "GNU Virtual Private Ethernet"
+.TH GVPE 8 "2005-03-26" "1.9" "GNU Virtual Private Ethernet"
 .SH "NAME"
 \&\f(CW\*(C`gvpe\*(C'\fR \- GNU Virtual Private Ethernet Daemon
 .SH "SYNOPSIS"
