@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "GVPE.PROTOCOL 7"
-.TH GVPE.PROTOCOL 7 "2005-03-23" "1.9" "GNU Virtual Private Ethernet"
+.TH GVPE.PROTOCOL 7 "2005-03-26" "1.9" "GNU Virtual Private Ethernet"
 .SH "The GNU-VPE Protocols"
 .IX Header "The GNU-VPE Protocols"
 .SH "Overview"
