@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "GVPECTRL 8"
-.TH GVPECTRL 8 "2005-03-23" "1.9" "GNU Virtual Private Ethernet"
+.TH GVPECTRL 8 "2005-03-26" "1.9" "GNU Virtual Private Ethernet"
 .SH "NAME"
 \&\f(CW\*(C`gvpectrl\*(C'\fR \- GNU Virtual Private Ethernet Control Program
 .SH "SYNOPSIS"
