@@ -173,7 +173,8 @@ struct connection
     void recv_vpn_packet (vpn_packet *pkt, const sockinfo &rsi);
     void send_vpn_packet (vpn_packet *pkt, const sockinfo &si, int tos = 0);
 
-    void script_init_env ();
+    void script_init_env (const char *ext);
+    void script_init_connect_env ();
     const char *script_node_up ();
     const char *script_node_down ();
 
